<resources>
    <string name="header">Ripley</string>
    <string name="category">Categoría del Producto:</string>
    <string name="amout">Monto de Compra:</string>
    <string name="zero_soles">S/ 0.00</string>
    <string name="zero_percentage">% 0.00</string>
    <string name="calculate">Calcular Descuento</string>
    <string name="igv">IGV:</string>
    <string name="without_discount">Monto sin Descuento:</string>
    <string name="percentage">Porcentaje de Descuento:</string>
    <string name="with_discount">Monto con Descuento:</string>
    <string name="logo_description">Logo</string>
    <string name="sale">APLICAR DESCUENTO</string>
</resources>